<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20sp"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp_choice"
        app:layout_constraintBottom_toBottomOf="@+id/compChoice_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/compChoice_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"
        app:layout_constraintBottom_toTopOf="@+id/scissorsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compChoice_img" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/compChoice_img"
        android:gravity="bottom"
        android:contentDescription="@string/comp_choice"
        android:layout_width="180sp"
        android:layout_height="180sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paperButton"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:background="@drawable/paper"
        android:contentDescription="@string/paper"
        android:gravity="center"
        android:padding="10sp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btSelect"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rockButton"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:background="@drawable/rock"
        android:contentDescription="@string/rock"
        android:gravity="center"
        android:padding="10sp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btSelect"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/spockButton"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:contentDescription="@string/spock"
        android:padding="10sp"
        android:background="@drawable/spock"
        app:layout_constraintBottom_toTopOf="@+id/paperButton"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/lizardButton"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:contentDescription="@string/lizard"
        android:padding="10sp"
        android:background="@drawable/lizard"
        app:layout_constraintBottom_toTopOf="@+id/rockButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/scissorsButton"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:contentDescription="@string/sсissors"
        android:padding="10sp"
        android:background="@drawable/scissors"
        app:layout_constraintBottom_toTopOf="@+id/lizardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSelect"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btInfo"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>